[project]
name = "comfyui_openai_node"
description = "This provides a single node openai > Open AI query node\nthat takes a system prompt and user message and sends them to chatGPT 3.5\nNote, you MUST have an OPEN AI API key stored in the environment variable OPENAI_API_KEY in order for this to work."
version = "1.0.0"
license = "LICENSE"
dependencies = ["openai"]

[project.urls]
Repository = "https://github.com/nagolinc/comfyui_openai_node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_openai_node"
Icon = ""
